mostly done product page, just have ai generated mitigation left

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@
 /ChainVisionApp/ChainVisionApp/obj/
 *.user
 /.vs
-/ChainVisionApp/DataScrapeConsoleApp/bin/Debug/net8.0/DataScrapeConsoleApp.dll
+/ChainVisionApp/DataScrapeConsoleApp/bin/
+/ChainVisionApp/DataScrapeConsoleApp/obj/
