--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /.vs
 /ChainVisionApp/DataScrapeConsoleApp/bin/
 /ChainVisionApp/DataScrapeConsoleApp/obj/
+/ChainVisionApp/NewsContentPopulator/bin/Debug/net6.0
