added console app for news generator

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,5 @@
 /.vs
 /ChainVisionApp/DataScrapeConsoleApp/bin/
 /ChainVisionApp/DataScrapeConsoleApp/obj/
-/ChainVisionApp/NewsContentPopulator/bin/Debug/net6.0
+/ChainVisionApp/NewsContentPopulator/bin/
+/ChainVisionApp/NewsContentPopulator/obj/
