--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /ChainVisionApp/DataScrapeConsoleApp/obj/
 /ChainVisionApp/NewsContentPopulator/bin/
 /ChainVisionApp/NewsContentPopulator/obj/
+/ChainVisionApp/ChainVision.Data/bin/Debug/net6.0
+/ChainVisionApp/ChainVision.Data/obj
