implemented shared data + ai generate news

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /ChainVisionApp/NewsContentPopulator/obj/
 /ChainVisionApp/ChainVision.Data/bin/Debug/net6.0
 /ChainVisionApp/ChainVision.Data/obj
+**/Properties/launchSettings.json
