--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /ChainVisionApp/ChainVision.Data/obj
 **/Properties/launchSettings.json
 /ChainVisionApp/ChainVisionApp/Properties/launchSettings.json
+/python-ai
